rag服务单元测试通过，修复Lucene MMapDirectory 类加载器冲突问题